name:               kerscher-github-io
version:            0.1.0.0
synopsis:           Github Pages for Yghor Kerscher
homepage:           http://kerscher.github.io
license:            BSD3
license-file:       LICENCE
author:             Yghor Kerscher
maintainer:         kerscher@acm.org
copyright:          © 2017 Yghor Kerscher
category:           Web
build-type:         Simple
cabal-version:      >= 1.10

executable kerscher-github-io
  default-language:   Haskell2010
  hs-source-dirs:     source
  main-is:            Main.hs
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base
                    , hakyll
                    , pandoc